[gd_scene load_steps=9 format=3 uid="uid://ddbcaqxds23wu"]

[ext_resource type="Script" uid="uid://d0aml7r1o4d8a" path="res://src/control.gd" id="1_50hm1"]
[ext_resource type="Texture2D" uid="uid://d25mb586powle" path="res://sunny-land/assets/environment/back.png" id="2_2m1iu"]
[ext_resource type="Resource" uid="uid://cj41i8ky2ba2m" path="res://src/Statue.tres" id="2_ap5a4"]
[ext_resource type="Texture2D" uid="uid://jyxgxreqkief" path="res://09.png" id="3_ap5a4"]
[ext_resource type="Texture2D" uid="uid://dsn2tylha23tp" path="res://icon.svg" id="4_akdcu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_62e2m"]
bg_color = Color(0.28, 0.28, 0.28, 0.596078)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qtu10"]
bg_color = Color(1, 0.12549, 0.294118, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ee4bf"]
bg_color = Color(0, 0.76, 0.0633333, 1)

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_50hm1")
enemy = ExtResource("2_ap5a4")

[node name="BG" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 644.0
texture = ExtResource("2_2m1iu")
expand_mode = 1

[node name="Enemy" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 1009.0
offset_top = 84.0
offset_right = 1137.0
offset_bottom = 212.0
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("3_ap5a4")

[node name="Player" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 196.0
offset_top = 365.0
offset_right = 324.0
offset_bottom = 493.0
texture = ExtResource("4_akdcu")

[node name="EnemyPanel" type="Panel" parent="."]
layout_mode = 1
offset_left = 80.0
offset_top = 32.0
offset_right = 670.0
offset_bottom = 102.0
theme_override_styles/panel = SubResource("StyleBoxFlat_62e2m")

[node name="EnemyData" type="VBoxContainer" parent="EnemyPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="EnemyPanel/EnemyData"]
layout_mode = 2
text = "Enemy"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="EnemyPanel/EnemyData"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 6
theme_override_styles/background = SubResource("StyleBoxFlat_qtu10")
theme_override_styles/fill = SubResource("StyleBoxFlat_ee4bf")
max_value = 50.0
step = 1.0
value = 25.0
show_percentage = false

[node name="Label" type="Label" parent="EnemyPanel/EnemyData/ProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -11.5
offset_right = 37.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "HP: 25/50"

[node name="PlayerPanel" type="Panel" parent="."]
layout_mode = 1
offset_left = 551.0
offset_top = 386.0
offset_right = 1141.0
offset_bottom = 456.0
theme_override_styles/panel = SubResource("StyleBoxFlat_62e2m")

[node name="PlayerData" type="VBoxContainer" parent="PlayerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PlayerPanel/PlayerData"]
layout_mode = 2
text = "Player"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="PlayerPanel/PlayerData"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 6
theme_override_styles/background = SubResource("StyleBoxFlat_qtu10")
theme_override_styles/fill = SubResource("StyleBoxFlat_ee4bf")
max_value = 50.0
step = 1.0
value = 25.0
show_percentage = false

[node name="Label" type="Label" parent="PlayerPanel/PlayerData/ProgressBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.0
offset_top = -11.5
offset_right = 37.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "HP: 25/50"

[node name="Actions" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -562.5
offset_top = -105.0
offset_right = 562.5
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Actions"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Attack" type="Button" parent="Actions/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
text = "ATACAR"

[node name="Defend" type="Button" parent="Actions/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
text = "DEFENDERSE"

[node name="Run" type="Button" parent="Actions/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
mouse_default_cursor_shape = 2
text = "HUIR"

[node name="Textbox" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -564.0
offset_top = -137.0
offset_right = 565.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="Textbox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "La estatua te reta a un duelo"

[node name="Ticker" type="Label" parent="Textbox"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = ">"

[connection signal="pressed" from="Actions/HBoxContainer/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="Actions/HBoxContainer/Run" to="." method="_on_run_pressed"]
